--- a/product_marble/views/stock_change_product_qty_view.xml
+++ b/product_marble/views/stock_change_product_qty_view.xml
@@ -12,9 +12,13 @@
                     <field name="is_raw" invisible="1"/>
                     <field name="product_id" readonly="1"/>
 
-                    <field name="domain_dimension_ids" invisible="1"/>
+                    <!--field name="domain_dimension_ids" invisible="1"/>
                     <field name="dimension_id"
                         domain="domain_dimension_ids"
+                        on_change="onchange_calculate_dim(dimension_id, dimension_qty, is_raw)"
+                        attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" / -->
+
+                    <field name="dimension_id"
                         on_change="onchange_calculate_dim(dimension_id, dimension_qty, is_raw)"
                         attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" />
 
