--- a/product_marble/views/stock_view.xml
+++ b/product_marble/views/stock_view.xml
@@ -2,36 +2,13 @@
 <openerp>
 	<data>
        
-        <!-- views -->
+        <!-- stock moves -->
+
         <record id="view_marble_move_form" model="ir.ui.view">
             <field name="name">marble.move.form</field>
             <field name="model">stock.move</field>
             <field name="inherit_id" ref="stock.view_move_form"/>
             <field name="arch" type="xml">
-
-               <!--field name="product_id" position="after">
-                    <field name="is_raw" invisible="1" />
-                    <field name="dimension_id"
-                        on_change="onchange_dimension_id(product_id, dimension_id)"
-                        attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" 
-                    />
-                    <field name="dimension_qty" 
-                        on_change="onchange_dimension_qty(dimension_id, dimension_qty)"
-                        attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" 
-                    />
-                    <label for="product_uom_qty"/>
-                        <div>
-                            <field name="product_uom_qty"
-                                on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)"
-                                class="oe_inline"/>
-                            <field name="product_uom" groups="product.group_uom" class="oe_inline"/>
-                            <button name="%(stock.move_scrap)d"
-                                    string="Scrap" type="action"
-                                    icon="terp-gtk-jump-to-ltr" context="{'scrap': True}"
-                                    states="draft,waiting,confirmed,assigned" colspan="1"/>
-                        </div>
-                    </label>
-               </field-->
 
                 <group name="main_grp_col1" position="replace">
                 <group name="main_grp_col1">
@@ -72,9 +49,7 @@
 
                             <span attrs="{'invisible':[('is_raw','=',False)]}"> ) </span>
                         </div>
-
                         <field name="name" string="Name"/>
-
                         <label for="product_uos_qty" groups="product.group_uos"/>
                         <div groups="product.group_uos">
                             <field name="product_uos_qty"
@@ -92,49 +67,76 @@
                     </group>
                 </group>
 
-                <!--field name="product_uom_qty" position="replace">
-                    <field name="product_uom_qty"
-                        attrs="{'readonly':[('is_raw','=',True)]}" 
-                        on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)"
-                        class="oe_inline"
-                    />
-                </field-->
+           </field>
+        </record>
+        
+        <!-- Inventory -->
 
-                <!--field name="product_uom" position="replace">
-                    <field name="product_uom" 
-                        attrs="{'readonly':[('is_raw','=',True)]}" 
-                        groups="product.group_uom" class="oe_inline"
-                    />
-                </field-->
+        <record id="view_marble_inventory_form" model="ir.ui.view">
+            <field name="name">stock.inventory.form</field>
+            <field name="model">stock.inventory</field>
+            <field name="inherit_id" ref="stock.view_inventory_form"/>
+            <field name="arch" type="xml">
 
-                <!-- v8
-                <group name="origin_grp" position="replace">
-                    <group name="origin_grp" string="Origin">
-                        <field name="origin"/>
-                        <field name="location_id" groups="stock.group_locations"/>
-                        <field name="picking_id" domain="[('picking_type_id','=',picking_type_id)]"/>
-                        <field name="create_date" groups="base.group_no_one"/>
-                        <field name="procure_method" attrs="{'readonly': [('state', '!=', 'draft')]}" groups="stock.group_adv_location"/>
-                        <field name="group_id"/>
-                    </group>
-                </group>
-                -->
-                <!-- v7                
-                <group name="origin_grp" position="replace">
-                    <group name="origin_grp" string="Origin">
-                        <field name="origin"             attrs="{'invisible': [('picking_id', '=', False)]}" readonly="1"/>
-                        <field name="picking_id"         domain="[('type','=',type)]"                        />
-                        <field name="type"               on_change="onchange_move_type(type)"                readonly="0"/>
-                        <field name="location_id"        groups="stock.group_locations"                      readonly="0"/>
-                        <field name="create_date"        groups="base.group_no_one"                          readonly="1"/>
-                        <field name="partner_picking_id" attrs="{'readonly': [('state', '=', 'done')]}" 
-                                                        domain="[('type','=','in')]"    
-                        />
-                    </group>
-                </group>
-                -->
+                <!-- Inventory >> Inventory Lines -->
+
+                <tree string="Inventory Details" position="replace">
+                <tree string="Inventory Details" editable="bottom" colors="blue: product_qty != theoretical_qty; red: theoretical_qty &lt; 0">
+                    <field context="{'location':location_id, 'uom':product_uom_id, 'to_date':parent.date}" name="product_id" on_change="on_change_product_id(product_id,product_uom_id,theoretical_qty,context)" domain="[('type','=','product')]"/>
+                    <field domain="[('usage','=','internal')]" name="location_id" groups="stock.group_locations" on_change="restrict_change(theoretical_qty)"/>
+                    <field name="prod_lot_id" on_change="restrict_change(theoretical_qty)" domain="[('product_id', '=', product_id)]" context="{'default_product_id': product_id}"  groups="stock.group_production_lot"/>
+
+                    <field name="is_raw" invisible="1"/>
+                    <field name="dimension_id" readonly="1"/>
+
+                    <field name="dimension_unit_theoretical" string="Dimension Theoretical [units]" readonly="1"/>
+                    <field name="dimension_unit" string="Dimension Real [units]" readonly="1" />
+
+                    <field name="dimension_m2_theoretical" string="Dimension Theoretical [m2]" readonly="1"/>
+                    <field name="dimension_m2" string="Dimension Real [m2]" readonly="1"/>
+
+                    <field name="package_id" on_change="restrict_change(theoretical_qty)" groups="stock.group_tracking_lot"/>
+                    <field name="partner_id" on_change="restrict_change(theoretical_qty)" groups="stock.group_tracking_owner"/>
+
+                    <field name="theoretical_qty" string="Product Theoretical Quantity" readonly="1"/>
+                    <field name="product_qty" string="Product Real Quantity"/>
+
+                    <field name="product_uom_id" groups="product.group_uom" on_change="restrict_change(theoretical_qty)"/>
+                    <field name="state" invisible="True"/>
+                </tree>
+                </tree>
+
+                <!-- Inventory >> Stock Moves -->
+
+                <tree string="Stock Moves" position="replace">
+                <tree colors="grey:scrapped == True" string="Stock Moves">
+                    <field name="product_id"/>
+                    <field name="is_raw" invisible="1"/>
+                    
+                    <field name="dimension_id" readonly="1"/>
+                    <field name="dimension_qty" readonly="1"/>
+
+                    <field name="product_uom_qty" on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)"/>
+                    <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
+                    <field name="product_uos" groups="product.group_uos"/>
+                    <field name="picking_id" invisible="1" />
+                    <field name="create_date" invisible="1" />
+                    <field name="date_expected" invisible="1" />
+                    <button name="%(stock.move_scrap)d"
+                        string="Scrap Products" type="action"
+                        icon="terp-gtk-jump-to-ltr" context="{'scrap': True}"
+                        states="draft,waiting,confirmed,assigned"
+                        groups="base.group_user"/>
+                    <field name="scrapped" invisible="1"/>
+                    <field name="location_id"/>
+                    <field name="location_dest_id"/>
+                    <field name="state"/>
+            </tree>
+            </tree>
+ 
             </field>
         </record>
+
 
   </data>
 </openerp>
