--- a/product_marble/views/marble_menu.xml
+++ b/product_marble/views/marble_menu.xml
@@ -4,18 +4,26 @@
         <!-- menu: Purchase > Products > Products(re-dirijo a Product Variant) -->
         <!-- replace model "product.template" for "product.product" -->
 
-        <record id="product_normal_action_puchased" model="ir.actions.act_window">
+        <!-- menuitem 
+            name="Products" id="menu_procurement_partner_contact_form" 
+            action="product_normal_action_puchased" parent="menu_procurement_management_product"/-->
+
+        <menuitem 
+            id="menu_procurement_partner_contact_form" name="Products Variants" 
+            action="product_normal_action_puchased" parent="purchase.menu_procurement_management_product"/>
+
+        <!--record id="product_normal_action_puchased" model="ir.actions.act_window">
             <field name="name">Products</field>
             <field name="type">ir.actions.act_window</field>
 
-            <!--field name="res_model">product.template</field-->
+            < ! - -field name="res_model">product.template</field- - >
             <field name="res_model">product.product</field>
             
             <field name="view_type">form</field>
             <field name="view_mode">kanban,tree,form</field>
             <field name="context">{"search_default_filter_to_purchase":1}</field>
-            <field name="search_view_id" eval="False"/> <!-- Force empty -->
-            <field name="view_id" eval="False"/> <!-- Force empty -->
+            <field name="search_view_id" eval="False"/> < ! - - Force empty - - >
+            <field name="view_id" eval="False"/> <! - - Force empty - - >
             <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Click to define a new product.
@@ -29,8 +37,32 @@
                 available suppliers, etc.
             </p>
             </field>
-        </record>
+        </record-->
 
+        <record id="product_normal_action_puchased" model="ir.actions.act_window">
+            <field name="name">Product Variants</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">product.product</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_type">form</field>
+            <field name="context">{"search_default_filter_to_purchase":1}</field>
+            <field name="search_view_id" eval="False"/> <!-- Force empty -->
+            <field name="view_id" eval="False"/> <!-- Force empty -->
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Click to define a new product.
+                </p><p>
+                    You must define a product for everything you purchase, whether
+                    it's a physical product, a consumable or services you buy to
+                    subcontractants.
+                </p><p>
+                    The product form contains detailed information to improve the
+                    purchase process: prices, procurement logistics, accounting data,
+                    available suppliers, etc.
+                </p>
+            </field>
+        </record>
+ 
         <!--
         view_product_marble_form
         -->
