--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -115,9 +115,9 @@
 
         <record id="view_product_marble_form" model="ir.ui.view">
             <field name="name">product.marble.form</field>
-            <field name="model">product.product</field>
-            <!--field name="inherit_id" ref="product.product_template_form_view"/-->
-            <field name="inherit_id" ref="product.product_normal_form_view" />
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <!--field name="inherit_id" ref="product.product_normal_form_view" /-->
             <!--field name="inherit_id" ref="stock.product_form_view_procurement_button" /-->
             <!--field name="inherit_id" ref="purchase.view_product_normal_purchase_buttons_from" /-->
             <!--field name="mode">primary</field-->
@@ -183,17 +183,7 @@
                             </field>
                             <group class="oe_subtotal_footer oe_right">
                                 <field name="dimension_total_m2" widget="statinfo"/>
-                               <!-- 
-                               <field name="amount_untaxed" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                               <field name="amount_tax" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                               <div class="oe_subtotal_footer_separator oe_inline">
-                                   <label for="amount_total"/>
-                                   <button name="button_dummy"
-                                       states="draft" string="(update)" type="object" class="oe_edit_only oe_link"/>
-                               </div>
-                               <field name="amount_total" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                               -->
-                           </group>
+                          </group>
                             <div class="oe_clear"/>
                         </page>
                        <page string="Stock Moves">
@@ -232,107 +222,11 @@
                             <field name="bacha_diam"/>
                         </group>
                     </group>
-              </page>
+                </page>
 
             </page>
-               <!--
-                    <group>
-                        <group string="Base">
-                            <field name="is_raw" invisible="1"/> 
-                            <field name="is_bacha" invisible="1"/> 
-                            <field name="uom_readonly" invisible="1"/> 
-
-                            <field name="type" readonly="1" />
-                            <field name="uom_id" 
-                                on_change="onchange_uom(uom_id,uom_po_id)" 
-                                attrs="{'readonly':[('uom_readonly','=',True)]}"
-                                groups="product.group_uom, product_marble.group_marble_user, product_marble.group_marble_user"
-                            />
-                            <field name="uom_po_id" attrs="{'readonly':[('uom_readonly','=',True)]}" />
-                        </group>
-
-                        <group>
-                        <group string="Raw Material" extend="1"
-                                attrs="{'invisible':[('is_raw','=',False)]}" 
-                                groups="product.group_uom,product_marble.group_marble_user"
-                        >
-                            <field name="material"  attrs="{'required':[('is_raw','=',True)]}" />
-                            <field name="color"     attrs="{'required':[('is_raw','=',True)]}" />
-                            <field name="finished"  attrs="{'required':[('is_raw','=',True)]}" />
-                        </group>
-                        <group string="Bacha" extend="1"
-                                attrs="{'invisible':[('is_bacha','=',False)]}" 
-                                groups="product.group_uom,product_marble.group_marble_user"
-                        >
-                            <field name="bacha_marca"    attrs="{'required':[('is_bacha','=',True)]}" />
-                            <field name="bacha_material" attrs="{'required':[('is_bacha','=',True)]}" />
-                        </group>
-                        </group>
-
-                        <group string="Other">
-                                <field name="active"/>
-                                <field name="default_code"/>
-                            <label for="ean13"/>
-                            <div name="ean">
-                                <field name="ean13" placeholder="e.g. 5901234123457"/>
-                            </div>
-                        </group>
-                        <group>
-                            <field groups="product.group_product_variant" name="variants"/>
-                            <field name="price_margin" groups="product.group_product_variant"/>
-                            <field name="price_extra" groups="product.group_product_variant"/>
-                        </group>
-                    </group>
-                    <field name="description" placeholder="describe the product characteristics..."/>
-                </page>
-                </page>
-
-                <page string="Procurements" position="replace" />
-                <group name="status" position="replace" />
-                <group name="sale" position="replace" />
-
-                <page string="Sales" position="after">
-
-                    <page string="Dimensions" attrs="{'invisible':[('is_raw','=',False)]}">
-                        <field name="dimension_ids" context="{'product_id':id}">
-                            <tree string="Dimensions">
-                                <field name="dimension"/>
-                                <field name="total_units"/>
-                                <field name="total_m2"/>
-                                <field name="type"/>
-                                <field name="state"/>
-                            </tree>
-                        </field>
-                    </page>
-
-                    <page string="Stock Moves" attrs="{'invisible':[('is_raw','=',False)]}">
-                        <field name="stock_move_ids">
-                            <tree string="Stock Moves">
-                                <field name="date"/>
-                                <field name="is_raw" invisible="1"/>
-                                <field name="name" attrs="{'invisible':[('is_raw','=',False)]}"/>
-
-                                <field name="qty_dimension" string="Units"/>
-                                <field name="qty_product"/>
-                                <field name="qty_balance"/>
-
-                                <field name="product_uom" string="UOM"/>
-                                <field name="state"/>
-                            </tree>
-                        </field>
-                    </page>
-                </page>
-                <page string="Sales" position="replace" />
-                -->
-            </field>
+           </field>
         </record>
-
-        <!--record id="view_product_marble_kanban" model="ir.ui.view" >
-            <field name="name">product.marble.kanban</field>
-            <field name="model">product.product</field>
-            < ! - -field name="arch" type="xml">
-           </field - - >
-        </record-->
 
    </data>
 </openerp>
