security group adminis 2

--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -129,6 +129,8 @@
                 </field>
                 <!-- -->
 
+               <!--page string="Variants" position="replace"/-->
+
                <page string="Information" position="replace">
                 <page string="Information">
                     <group colspan="4">
