--- a/product_marble/views/marble_menu.xml
+++ b/product_marble/views/marble_menu.xml
@@ -101,6 +101,29 @@
                                                  ref('product_marble.group_sale_adminis'),
             ])]"/>
         </record>
+ 
+        <!-- STOCK -->
+
+        <!-- Top Menu > Warehouse -->
+        <record id="stock.menu_stock_root" model="ir.ui.menu">
+            <field name="groups_id" eval="[(4,ref('product_marble.group_stock_adminis'))]"/>
+        </record>
+
+        <!-- Warehouse > Products > ... by Category -->
+        <record id="stock.menu_product_by_category_stock_form" model="ir.ui.menu">
+            <field name="groups_id" eval="[(4,ref('product_marble.group_stock_adminis'))]"/>
+        </record>
+
+        <!-- Warehouse > Traceability > Stock Moves -->
+        <record id="stock.menu_action_move_form2" model="ir.ui.menu">
+            <field name="groups_id" eval="[(4,ref('product_marble.group_stock_adminis'))]"/>
+        </record>
+
+        <!-- Warehouse > Traceability > Stock Quants -->
+        <record id="stock.menu_quants" model="ir.ui.menu">
+            <field name="groups_id" eval="[(4,ref('product_marble.group_stock_adminis'))]"/>
+        </record>
+
 
 
         <!-- Reporting >  -->
