--- a/product_marble/views/res_partner_view.xml
+++ b/product_marble/views/res_partner_view.xml
@@ -1,8 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
-	<data>
-       
-       <record id="product_marble_view_res_partner_filter" model="ir.ui.view">
+    <data>
+        <!--record id="view_marble_partner_property_form" model="ir.ui.view">
+            <field name="name">res.partner.property.form.inherit</field>
+            <field name="model">res.partner</field>
+            <field name="priority">2</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <page name="sales_purchases" position="after">
+                    <page string="Accounting" col="4" name="accounting" attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
+                          groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis">
+                    <group>
+                        <group>
+                            <field name="property_account_position" widget="selection"/>
+                        </group>
+                        <group>
+                            <field name="last_reconciliation_date"/>
+                        </group>
+                        <group>
+                            <field name="property_account_receivable" groups="account.group_account_invoice" />
+                            <field name="property_payment_term" widget="selection"/>
+                            <field name="credit"/>
+                            <field name="credit_limit"/>
+                        </group>
+                        <group>
+                            <field name="property_account_payable" groups="account.group_account_invoice"/>
+                            <field name="property_supplier_payment_term" widget="selection"/>
+                            <field name="debit"/>
+                        </group>
+                    </group>
+                    <field name="bank_ids" context="{'default_partner_id': active_id, 'form_view_ref': 'base.view_partner_bank_form'}">
+                        <tree string="Bank Details">
+                            <field name="state" invisible="1"/>
+                            <field name="sequence" invisible="1"/>
+                            <field name="acc_number"/>
+                            <field name="bank_name"/>
+                            <field name="owner_name"/>
+                        </tree>
+                    </field>
+                </page>
+                <page string="Accounting" name="accounting_disabled" attrs="{'invisible': ['|',('is_company','=',True),('parent_id','=',False)]}" groups="account.group_account_invoice">
+                    <div>
+                        <p>Accounting-related settings are managed on <button name="open_commercial_entity" type="object" string="the parent company" class="oe_link"/></p>
+                    </div>
+                </page>
+                </page>
+            </field>
+        </record-->
+ 
+       <!--record id="product_marble_view_res_partner_filter" model="ir.ui.view">
             <field name="name">res.partner.select</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_res_partner_filter"/>
@@ -38,7 +84,22 @@
                     ]" />
                </field>
            </field>
-        </record>
+        </record-->
+
+        <!--record id="view_marble_partner_form" model="ir.ui.view">
+            <field name="name">res.partner.form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@string='Accounting']" position="attributes">
+                    <attribute name="groups">[account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis]</attribute>> 
+                    <page string="Accounting" col="4" name="accounting" 
+                          attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
+                          groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_purchase_adminis"
+                    >
+                </xpath>
+            </field>
+        </record-->
 
   </data>
 </openerp>
