--- a/product_marble/views/stock_view.xml
+++ b/product_marble/views/stock_view.xml
@@ -14,7 +14,9 @@
                 <group name="main_grp_col1">
                         <field name="product_id" on_change="onchange_product_id(product_id,location_id,location_dest_id, False)"/>
 
+                        <field name="prod_type" invisible="1"/>
                         <field name="is_raw" invisible="1"/>
+
                         <field name="dimension_id"
                             on_change="onchange_calculate_dim(product_id, product_uom, product_uom_qty, dimension_id, dimension_qty)"
                             attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" />
@@ -37,8 +39,7 @@
                             
                             <!--field name="product_uom" groups="product.group_uom" class="oe_inline"/-->
                             <field name="product_uom" 
-                                attrs="{'readonly':[('is_raw','=',True)]}" 
-                                groups="product.group_uom" 
+                                attrs="{'readonly':[('prod_type','in',['raw','bacha'])]}" 
                                 class="oe_inline"/>
 
                             <!--button name="%(stock.move_scrap)d"
@@ -62,14 +63,18 @@
  
                 <!--field name="name" position="replace"/-->
                 <group name="main_grp" position="after">
-                     <group colspan="4">
+                    <group colspan="4">
                         <field name="description" readonly="1"/>
                     </group>
                 </group>
+                
+                <group name="destination_grp" position="inside">
+                    <field name="employee_id"/>
+                </group>
+            </field>
 
-           </field>
         </record>
-        
+            
         <!-- Inventory -->
 
         <record id="view_marble_inventory_form" model="ir.ui.view">
@@ -117,7 +122,7 @@
                     <field name="dimension_qty" readonly="1"/>
 
                     <field name="product_uom_qty" on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)"/>
-                    <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
+                    <field name="product_uom" string="Unit of Measure"/>
                     <field name="product_uos" groups="product.group_uos"/>
                     <field name="picking_id" invisible="1" />
                     <field name="create_date" invisible="1" />
@@ -135,6 +140,78 @@
             </tree>
  
             </field>
+        </record>
+
+        <!-- Move Picking -->
+
+        <record id="view_marble_move_picking_form" model="ir.ui.view">
+            <field name="name">stock.move.form</field>
+            <field name="model">stock.move</field>
+            <field name="inherit_id" ref="stock.view_move_picking_form"/>
+            <field eval="20" name="priority"/>
+            <field name="arch" type="xml">
+
+                <field name="product_id" position="after">
+                    <field name="is_raw" invisible="1"/>
+                    <field name="prod_type" invisible="1"/>
+                    <field name="dimension_id"
+                        on_change="onchange_calculate_dim(product_id, product_uom, product_uom_qty, dimension_id, dimension_qty)"
+                        attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" />
+                </field>
+
+                <xpath expr="//group//group//div" position="replace" >
+                    <div>
+                        <field name="dimension_qty" 
+                            on_change="onchange_calculate_dim(product_id, product_uom, product_uom_qty, dimension_id, dimension_qty)"
+                            attrs="{'required':[('is_raw','=',True)], 'invisible':[('is_raw','=',False)]}" 
+                            class="oe_inline"/>
+
+                        <span attrs="{'invisible':[('is_raw','=',False)]}"> ( </span>
+                        
+                        <!--field name="product_uom_qty" on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)" class="oe_inline"/-->
+                        <field name="product_uom_qty"
+                            attrs="{'readonly':[('is_raw','=',True)]}" 
+                            on_change="onchange_calculate_dim(product_id, product_uom, product_uom_qty, dimension_id, dimension_qty)"
+                            class="oe_inline"/>
+                        <span> . </span>
+                        <!--field name="product_uom" string="Unit Of Measure" groups="product.group_uom" class="oe_inline"/-->
+                        <field name="product_uom" 
+                                attrs="{'readonly':[('prod_type','in',['raw','bacha'])]}" 
+                                class="oe_inline"/>
+                        <!--button name="%(stock.move_scrap)d"
+                                string="Scrap" type="action"
+                                icon="terp-gtk-jump-to-ltr" context="{'scrap': True}"
+                                states="draft,waiting,confirmed,assigned"
+                                groups="base.group_user"/-->
+                        <span attrs="{'invisible':[('is_raw','=',False)]}"> ) </span>
+                    </div>
+               </xpath>
+
+               <field name="name" position="replace">
+                   <field name="name" string="Name"/>
+               </field>
+
+               <group string="Locations" position="before">
+                   <group colspan="4">
+                       <field name="description" readonly="1"/>
+                   </group>
+               </group>
+ 
+            </field>
+        </record>
+
+        <record id="view_marble_move_picking_tree" model="ir.ui.view">
+            <field name="name">stock.move.tree</field>
+            <field name="model">stock.move</field>
+            <field name="inherit_id" ref="stock.view_move_picking_tree"/>
+            <field eval="4" name="priority"/>
+            <field name="arch" type="xml">
+                <field name="product_uom_qty" position="before">
+                    <field name="prod_type" invisible="1"/>
+                    <field name="dimension_id" attrs="{'invisible':[('prod_type','!=','raw')]}"/>
+                    <field name="dimension_qty" attrs="{'invisible':[('prod_type','!=','raw')]}"/>
+                </field>
+           </field>
         </record>
 
 
