--- a/product_marble/views/stock_view.xml
+++ b/product_marble/views/stock_view.xml
@@ -214,6 +214,17 @@
            </field>
         </record>
 
+        <record id="view_marble_picking_form" model="ir.ui.view">
+            <field name="name">stock.picking.form</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.view_picking_form"/>
+            <field eval="12" name="priority"/>
+            <field name="arch" type="xml">
+                <field name="backorder_id" position="after">
+                    <field name="prod_type"/>
+                </field>
+            </field>
+        </record>
 
   </data>
 </openerp>
