--- a/product_marble/views/stock_transfer_details.xml
+++ b/product_marble/views/stock_transfer_details.xml
@@ -6,11 +6,25 @@
             <field name="model">stock.transfer_details</field>
             <field name="inherit_id" ref="stock.view_stock_enter_transfer_details"/>
             <field name="arch" type="xml">
-
-                <field name="product_id" position="after">
-                    <!--field name="prod_type" invisible="1"/>
-                    <field name="dimension_id" attrs="{'invisible':[('prod_type','!=','raw')]}"/>
-                    <field name="dimension_unit" attrs="{'invisible':[('prod_type','!=','raw')]}"/-->
+                <!--
+                        on_change="product_id_change(product_id, dimension_id, dimension_unit, quantity, product_uom_id, context)"
+                        on_change="dimension_change(product_id, dimension_id, dimension_unit, quantity, context)"
+                        on_change="dimension_change(product_id, dimension_id, dimension_unit, quantity, context)"
+                -->
+               <field name="product_id" position="replace">
+                    <field name="prod_type" invisible="1"/>
+                    <field name="product_id" required="True" 
+                        context="{'uom':product_uom_id, 'prod_type':prod_type}" 
+                    />
+                    <field name="dimension_id" attrs="{'required':[('prod_type','=','raw')],'readonly':[('prod_type','!=','raw')]}" 
+                        context="{'uom':product_uom_id, 'prod_type':prod_type}" 
+                    />
+                    <field name="dimension_unit" attrs="{'required':[('prod_type','=','raw')],'readonly':[('prod_type','!=','raw')]}"
+                        context="{'uom':product_uom_id, 'prod_type':prod_type}" 
+                     />
+               </field>
+                <field name="quantity" position="replace">
+                    <field name="quantity" attrs="{'readonly':[('prod_type','=','raw')]}" />
                 </field>
 
                 <!--form string="Transfer details" version="7">
