Se saca el campo product_uom

--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -305,9 +305,9 @@
                                     <field name="qty_dimension" string="Units"/>
                                     <field name="qty_product"/>
                                     <field name="qty_balance"/>
-
+<!--
                                     <field name="product_uom"
-                                         string="UOM"/>
+                                         string="UOM"/>-->
                                     <field name="state"/>
                                 </tree>
                             </field>
